# zapchasti-mira-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 28a9a642cb33_upgrad_tables.py  491b05a5f3ea_add_contact_table.py  564d5281d055_init.py  78427d67883c_add_column_base_category_id.py  8ef7e5f0f8ce_add_search_vector_to_products.py  8f410ce61160_tsvector.py  9669d6587903_add_state_to_user.py  cdd0823dafe9_upgrad_id.py  e37380dd088e_init.py
zapchastimira/common/: db_utils.py  settings.py  tables.py
zapchastimira/interface/: models.py  telegram.py
zapchastimira/repositories/: base.py  cart_item.py  category.py  contact.py  order.py  order_item.py  part.py  product.py  user.py  user_cars.py
zapchastimira/services/: part.py  search_service.py  user.py
